Basic AngularJS App setup

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,31 @@
-Test
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" class="en" ng-app="dbapp">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="description" content="Spring Music">
+    <meta name="title" content="Database Connect">
+    <title>Database Connect</title>
+
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.1.1/css/bootstrap.css">
+
+
+</head>
+
+<body>
+
+<div ng-view></div>
+
+<script type="text/javascript" src="webjars/jquery/2.1.0/jquery.min.js"></script>
+<script type="text/javascript" src="webjars/angularjs/1.2.16/angular.js"></script>
+<script type="text/javascript" src="webjars/angularjs/1.2.16/angular-resource.js"></script>
+<script type="text/javascript" src="webjars/angularjs/1.2.16/angular-route.js"></script>
+<script type="text/javascript" src="webjars/angular-ui/0.4.0/angular-ui.js"></script>
+<script type="text/javascript" src="webjars/angular-ui-bootstrap/0.10.0/ui-bootstrap.js"></script>
+<script type="text/javascript" src="webjars/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
+<script type="text/javascript" src="webjars/bootstrap/3.1.1/js/bootstrap.js"></script>
+
+<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="home/home.controller.js"></script>
+
+</body>
+</html>
