Customized how UI is added Removed Webjars

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,23 +6,17 @@
     <meta name="title" content="Database Connect">
     <title>Database Connect</title>
 
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.1.1/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 
 </head>
 
 <body>
-
+<h1>Main App</h1>
 <div ng-view></div>
 
-<script type="text/javascript" src="webjars/jquery/2.1.0/jquery.min.js"></script>
-<script type="text/javascript" src="webjars/angularjs/1.2.16/angular.js"></script>
-<script type="text/javascript" src="webjars/angularjs/1.2.16/angular-resource.js"></script>
-<script type="text/javascript" src="webjars/angularjs/1.2.16/angular-route.js"></script>
-<script type="text/javascript" src="webjars/angular-ui/0.4.0/angular-ui.js"></script>
-<script type="text/javascript" src="webjars/angular-ui-bootstrap/0.10.0/ui-bootstrap.js"></script>
-<script type="text/javascript" src="webjars/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
-<script type="text/javascript" src="webjars/bootstrap/3.1.1/js/bootstrap.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
 
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="home/home.controller.js"></script>
