--- a/src/main/resources/static/home/home-view.html
+++ b/src/main/resources/static/home/home-view.html
@@ -1,3 +1,9 @@
-<div ng-app="login" ng-controller='homectrl'>
-    {{ welcomeMessage }}
+<div class="row"  ng-app="login" ng-controller='homectrl'>
+    <div class="col-md-4">
+        Database Type :
+        <select ng-model="selectedConnector">
+            <option selected="selected" disabled> --- select ----</option>
+            <option ng-repeat="x in availableConnectors" value="{{x}}">{{x}}</option>
+        </select>
+    </div>
 </div>
