--- a/src/main/resources/static/home/home-view.html
+++ b/src/main/resources/static/home/home-view.html
@@ -11,11 +11,11 @@
 
         <div class="form-group">
             <label class="sr-only" for="inputHost">Host Name/IP</label>
-            <input type="email" class="form-control" id="inputHost" placeholder="Host Name/IP">
+            <input type="url" class="form-control" id="inputHost" placeholder="Host Name/IP">
         </div>
         <div class="form-group">
             <label class="sr-only" for="inputUser">User Name</label>
-            <input type="password" class="form-control" id="inputUser" ng-model="userName" placeholder="User">
+            <input class="form-control" id="inputUser" ng-model="userName" placeholder="User">
         </div>
         <div class="form-group">
             <label class="sr-only" for="inputPassword">Password</label>
@@ -23,6 +23,7 @@
         </div>
         <div class="form-group form-inline">
 
+        <button type="submit" class="btn btn-primary form-control">Test Connection</button>
         <button type="submit" class="btn btn-default form-control">Submit</button>
         <button type="submit" class="btn btn-danger form-control">Reset</button>
         </div>
